Visual Improvement for date

--- a/BlogExercise/blogStyle.css
+++ b/BlogExercise/blogStyle.css
@@ -26,7 +26,7 @@
 
 .main-date {
   font-family: 'Source Sans Pro', sans-serif;
-  padding-top: 0;
+  padding-top: 15px;
   color: #3498db;
   letter-spacing: 0.2rem;
   font-weight: bold;
