--- a/FrontEndMentorChallenge1/style.css
+++ b/FrontEndMentorChallenge1/style.css
@@ -1,9 +1,12 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Open Sans', sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
-    font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway', sans-serif;
+}
+.par1 {
+	color: hsl(0, 0%, 50%);
 }
