Refactoring JS and added new feature
New feature is incorrect tiles that are chosen now disappear.

--- a/Projects/ColorGameApp/colorGame.css
+++ b/Projects/ColorGameApp/colorGame.css
@@ -67,3 +67,9 @@ body {
 .newColors:hover {
     background-color: var(--main-bg-color);
 }
+
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 0.8s, opacity 0.8s linear;
+}
