Working with flexbox to create a better skeleton for the todo list

--- a/Projects/TodoApp/todo.css
+++ b/Projects/TodoApp/todo.css
@@ -1,24 +1,34 @@
 * {
     margin: 0;
     padding: 0;
-    border: 0;
-    overflow: hidden;
 }
 
 body {
     background-color: rgba(100, 200, 80, 0.315);
 }
 
-.container {
+.flexbox-container {
     display: flex;
-    margin: 5% auto;
     justify-content: center;
-    background-color: rgba(96, 160, 212, 0.685);
-    width: 40%;
-    border: 2px solid black;
 }
 
-.center {
-    width: inherit;
-    padding: 20% 15%;
+.flexbox-item {
+    background-color: rgba(96, 160, 212, 0.685);
+    border: 1px solid black;
+    width: 200px;
+    margin: 10px;
+}
+
+.flexbox-item-1 {
+    background-color: black;
+    min-height: 100px;
+}
+
+.flexbox-item-2 {
+    background-color: brown;
+    min-height: 200px;
+}
+
+.flexbox-item-3 {
+    min-height: 300px;
 }
