--- a/Projects/TodoApp/todo.css
+++ b/Projects/TodoApp/todo.css
@@ -15,19 +15,19 @@ body {
 
 .header {
     background-color: rgba(68, 151, 219, 0.808);
-    border-radius: 10px 10px 0 0;
-    padding-left: 10px;
+    padding: 3px 10px;
     font-size: 25px;
-    padding-top: 3px;
 }
 
 i {
     padding-left: 58%;
 }
 
-.input {
+.input,
+.input:focus {
     width: 97.5%;
     border: none;
+    outline: none;
     font-size: 15px;
     padding: 5px;
 }
@@ -37,14 +37,18 @@ i {
 }
 
 .flexbox-item {
-    border-radius: 10px;
     background-color: #ffff;
     width: 200px;
     margin: 10px;
-    margin-top: 80px;
+    margin-top: 100px;
 }
 
 .flexbox-item-1 {
     min-height: 450px;
     min-width: 400px;
+    box-shadow: 5px 5px 10px rgba(2, 0, 36, 1);
+}
+
+li {
+    list-style-type: none;
 }
